# collab

./: Dockerfile  Dockerfile.windows  README.md  README.md.m  entrypoint.bat  entrypoint.ps1.ps  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: test.yml
notebooks/: workshop_2.ipynb
