[tool.poetry]
name = "edifai"
version = "0.1.0"
description = ""
authors = ["agombert <arnault.gombert@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.45.1"
openai = "^1.50.2"
datasets = "^3.0.1"
nltk = "^3.9.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
langdetect = "^1.0.9"
spacy = "^3.7.5"
torch = "^2.4.1"
python-dotenv = "^1.0.1"
sentencepiece = "^0.2.0"
setfit = "^1.1.0"
jupyter = "^1.1.1"
numpy = "^1.21.0"
scikit-learn = "^1.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
